# SurgicalToolSegmentation

./: .gitignore  README.md  pyproject.toml
stseg/: create_dataset.py  data_processing.py  inference.py  model.py  training.py  utils.py
