[project]
name = "stseg"
version = "0.1.0"
description = "Surgical tool segmentation."
authors = [{ name = "Vangelis Kostoulas", email = "vageliskos93@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "torch<2.7",
    "nnunetv2",
    "monai",
    "torchinfo",
    "zarr==3.1.1",
    "opencv-python",
    "segmentation-models-pytorch",
    "jupyter",
    "matplotlib",
    "ipywidgets",
    "ipympl",
    "notebook",
    "tornado"
]

[project.scripts]
stseg_create_dataset = "stseg.create_dataset:main"
stseg_train_model = "stseg.training:main"
stseg_infer = "stseg.inference:main"

[build-system]
requires = ["setuptools>=68.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stseg"]
